sandbox/output
OneHundredDoorsTest.java:33: error: cannot find symbol
        assertArrayEquals(new Door[]{DS.OPEN, DS.C, DS.C}, oneHundredDoors.doorStatesAfterPassingDoors(3));
                              ^
  symbol:   class Door
  location: class OneHundredDoorsTest
1 error
